# backend/src/server/routes/studentsRouter.js
@@ -12,12 +12,13 @@ router.route(path)
     .post(RequestValidator.body, StudentController.post)
     .get(AdminAuthentication, StudentController.get);
 
+router.route(`${path}/info`)
+    .get(Authentication, StudentController.getInfo)
+
 router.route(`${path}/:uuid`)
     .all(RequestValidator.params, AdminAuthentication)
     .get(StudentController.getByUuid)
     .put(RequestValidator.body, StudentController.put)
     .delete(StudentController.del);
 
-router.route("/userInfo")
-    .get(Authentication, StudentController.getInfo)
 module.exports = router;
